--- a/src/_app.scss
+++ b/src/_app.scss
@@ -1,10 +1,9 @@
 body {
   margin: 0;
-  padding: 0;
-  // width: 100%;
-  // height: 100%;
-  // overflow-x: hidden;
+  -ms-overflow-style: none;
+}
 
-  // padding-right: 17px;
-  // box-sizing: content-box;
+// Hide Scrollbar
+body::-webkit-scrollbar {
+  display: none;
 }
